# riscv-rust

./: .envrc  .gitignore  MIGRATION_GUIDE.md  Makefile  NIX_SETUP.md  PHYSICAL_DESIGN.md  README.md  REGRESSION_TESTING.md  UBUNTU_SETUP.md  bin_to_hex.py  flake.nix  hello_world.hex  picorv32_sim  pytest.ini  regression-report.html  requirements.txt  setup-nix-env.sh  shell.nix  testbench.vcd
.github/workflows/: nix-ci.yml
.nix-direnv/: direnvrc
cores/picorv32/: testbench.v
neorv32/: Makefile  README.md  setup.csh
neorv32/fpga/: neorv32_tb.vhd  neorv32_top.vhd
neorv32/rust-hello-world/: Cargo.toml  memory.x
neorv32/rust-hello-world/.cargo/: config.toml
neorv32/rust-hello-world/src/: main.rs
picorv32/: .gitignore  Makefile  README.md  setup.csh  setup.sh  testbench.v
picorv32/rtl/: picorv32_testbench.v
picorv32/rust-hello-world/: Makefile  generate_hex.csh
picorv32/rust-hello-world/src/: main.rs
projects/hello-world/: test_config.json
scripts/: run_tests.py
tests/: conftest.py  test_basic.py
tools/: __init__.py  bin_converter.py  project_manager.py  regression.py  run_regression.py  simulator.py
tools/physical_design/: __init__.py  pnr.py  setup.py  signoff.py  synthesize.py
