[package]
name = "neorv32-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
# No standard library - we're running on bare metal
riscv = "0.10.1"     # RISC-V CPU specific functions
riscv-rt = "0.11.0"  # Minimal RISC-V runtime and startup code

[profile.dev]
panic = "abort"  # Disable unwinding on panic in dev mode

[profile.release]
panic = "abort"  # Disable unwinding on panic in release mode
opt-level = "s"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1 # Use only one codegen unit to improve optimization
